# Compiler

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  arithmetic_op.h  assign.h  ast.cpp  ast.h  fun_call.h  function.h  if_then_else.h  integer.h  interpreter.cpp  interpreter.h  lex.yy.c  lexer.cpp  lexer.l  logic_op.h  main.cpp  main.cpp_  name_type.h  parser.cpp  parser.hpp  parser.tab.c  parser.tab.h  parser.y  parser.y_  print.h  program.c  program.h  return.h  scanner.h  scanner.l  statement.h  type.h  var.h  while.h
src/: ast.cpp  boolean.h  call_stack.h  driver.cpp  driver.h  function.h  i_visitor.h  interpreter.cpp  interpreter.h  interpreter_visitor.cpp  interpreter_visitor.h  ir.h  main.cpp  name_type.h  parser.y  parser_driver.cpp  parser_driver.h  pretty_print_visitor.cpp  pretty_print_visitor.h  print_visitor.cpp  print_visitor.h  scanner.h  scanner.l  semantic_visitor.cpp  semantic_visitor.h  var.h  while.h
src/ast/: arithmetic_op.h  array.h  assign.h  ast.cpp  ast.h  block.h  bool_literal.h  expr.h  fun_call.h  function.h  helpers.cpp  helpers.h  if_then_else.h  integer.h  logic_op.h  name_type.h  print.h  program.h  rand.h  return.h  string_literal.h  type.h  var.h  while.h
test/: CMakeLists.txt  interpreter_tests.cpp  parser_tests.cpp  semantic_analysis_tests.cpp  test_ast.cpp  utils.h
test_programs/: CMakeLists.txt  fire.c  fire.cpp  program.c
